agrego ColeccionInputDTO y mapeo con el DTO del front